--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login - Controle Financeiro</title>
+    <title>Login</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
+    <%= stylesheet_link_tag 'login', media: 'all' %>
     <%= javascript_include_tag 'application', 'data-turbo-track': 'reload' %>
   </head>
   <body>
