--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,10 +6,8 @@
   <title>Cadastro de Usuários</title>
   <link rel="stylesheet" href="/app/assets/stylesheets/auth.css">
 </head>
-<body class="body-signup">
-  <!-- Section: Design Block -->
-  <section>
-    <!-- Jumbotron -->
+<body class="body-signup">  
+  <section>    
     <div class="px-3 py-5 px-md-5 text-center text-lg-start">
       <div class="container-fluid signup">
         <div class="row gx-lg-5 align-items-center">
@@ -23,40 +21,31 @@
             <h2 class="mb-4">Cadastro de Usuários</h2> 
             <div class="card">
               <div class="card-body py-5 px-md-5">
-                <form>
-                  <!-- Nome -->
+                <%= form_with(model: @user, url: users_path, local: true) do |form| %>                  
                   <div class="form-outline mb-4">                  
-                    <input type="text" id="form3Example1" class="form-control" placeholder="Entre com seu nome" />                  
+                    <%= form.text_field :name, class: "form-control", placeholder: "Entre com seu nome", required: true %>                  
+                  </div>                  
+                  
+                  <div class="form-outline mb-4">                  
+                    <%= form.email_field :email, class: "form-control", placeholder: "Entre com seu email", required: true %>                  
+                  </div>                  
+                  
+                  <div class="form-outline mb-4">                  
+                    <%= form.password_field :password, class: "form-control", placeholder: "Digite sua senha", required: true, minlength: 6 %>                  
                   </div>
                   
-                  <!-- E-mail -->
                   <div class="form-outline mb-4">                  
-                    <input type="email" id="form3Example2" class="form-control" placeholder="Entre com seu email"/>                  
-                  </div>
-                  
-                  <!-- Senha -->
-                  <div class="form-outline mb-4">                  
-                    <input type="password" id="form3Example3" class="form-control" placeholder="Digite sua senha" />                  
-                  </div>
-
-                  <!-- Confirmação de Senha -->
-                  <div class="form-outline mb-4">                  
-                    <input type="password" id="form3Example4" class="form-control" placeholder="Confirme sua senha" />                  
-                  </div>               
-                  
-                  <!-- Botão de Cadastro -->
-                  <button type="submit" class="btn btn-success btn-block mb-4">
-                    Cadastrar
-                  </button>
-                </form>
+                    <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Confirme sua senha", required: true, minlength: 6 %>                  
+                  </div>              
+                                    
+                   <%= form.submit "Cadastrar", class: "btn btn-success btn-block mb-4" %>                  
+                <% end %>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- Jumbotron -->
-  </section>
-  <!-- Section: Design Block -->
+    </div>   
+  </section>  
 </body>
 </html>
