--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,11 +2,11 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-        <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="<%= dashboard_path %>">
+        <div class="sidebar-brand-icon">
+            <i class="fas fa-landmark"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">finance control</div>
     </a>
 
     <!-- Divider -->
@@ -14,7 +14,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="<%= dashboard_path %>">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a>
     </li>
@@ -98,11 +98,12 @@
             <span>Charts</span></a>
     </li>
 
-    <!-- Nav Item - Tables -->
+    <!-- Logout -->
     <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a>
+        <%= link_to logout_path, method: :delete, class: "nav-link", data: { confirm: "Você tem certeza que deseja sair?" }, title: "Logout" do %>
+            <i class="fas fa-sign-out-alt"></i>
+            <span>Logout</span>
+        <% end %>
     </li>
 
     <!-- Divider -->
