Página de categorias

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -91,11 +91,12 @@
         </div>
     </li>
 
-    <!-- Nav Item - Charts -->
+    <!-- Botão Categorias -->
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a>
+        <a class="nav-link" href="<%= categories_path %>">
+          <i class="fas fa-sitemap"></i>
+          <span>Categorias</span>
+        </a>
     </li>
 
     <!-- Logout -->
