--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -8,8 +8,9 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                Earnings (Monthly)</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                Despesas
+                            </div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">R$ 0,00</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -26,8 +27,9 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                Earnings (Annual)</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                                Receitas
+                            </div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">R$ 0,00</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -43,7 +45,8 @@
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
+                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                Metas Financeiras
                             </div>
                             <div class="row no-gutters align-items-center">
                                 <div class="col-auto">
@@ -59,7 +62,7 @@
                             </div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                            <i class="fas fa-chart-line fa-2x text-gray-300"></i>                            
                         </div>
                     </div>
                 </div>
@@ -73,11 +76,12 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                Pending Requests</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                Saldo Atual
+                            </div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">R$ 0,00</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                            <i class="fas fa-hand-holding-usd fa-2x text-gray-300"></i>                            
                         </div>
                     </div>
                 </div>
