--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="form-group">
     <%= form.label :category_type, 'Tipo de Categoria', class: 'form-label' %>
-    <%= form.select :category_type, options_for_select(['Despesa', 'Receita'], category.category_type), {}, class: 'form-select' %>
+    <%= form.select :category_type, options_for_select(Category.category_types.keys.map { |key| [key.humanize, key] }, category.category_type), {}, class: 'form-select' %>
   </div>
 
   <div class="form-group">
