--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,37 +1,38 @@
-<%= form_with(model: transaction, local: true) do |form| %>
+<%= form_with(model: transaction, local: true, html: { class: 'mt-4' }) do |form| %>
   <% if transaction.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
-
+    <div class="alert alert-danger">
+      <h5><%= pluralize(transaction.errors.count, "erro") %> impediram o salvamento da transação:</h5>
       <ul>
-      <% transaction.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% transaction.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :amount %>
-    <%= form.text_field :amount %>
+  <div class="form-group">
+    <%= form.label :amount, 'Valor', class: 'form-label' %>
+    <%= form.text_field :amount, class: 'form-control', placeholder: 'Digite o valor' %>
   </div>
 
-  <div class="field">
-    <%= form.label :category_id %>
-    <%= form.text_field :category_id %>
+  <div class="form-group">
+    <%= form.label :category_id, 'Categoria', class: 'form-label' %>
+    <%= form.collection_select :category_id, Category.all, :id, :name, { prompt: 'Selecione uma categoria' }, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :transaction_date %>
-    <%= form.date_select :transaction_date %>
+  <div class="form-group">
+    <%= form.label :transaction_date, 'Data da Transação', class: 'form-label' %>
+    <%= form.date_field :transaction_date, class: 'form-control' %>
+  </div>
+ 
+
+  <div class="form-group">
+    <%= form.label :description, 'Descrição', class: 'form-label' %>
+    <%= form.text_area :description, class: 'form-control', placeholder: 'Digite uma descrição (opcional)' %>
   </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group mt-3">
+    <%= form.submit 'Salvar Transação', class: 'btn btn-primary' %>
+    <%= link_to 'Cancelar', transactions_path, class: 'btn btn-secondary' %>
   </div>
 <% end %>
