--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,20 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de Usuários</title>
-  <link rel="stylesheet" href="/app/assets/stylesheets/auth.css">
+  
+  <link rel="stylesheet" href="/app/assets/stylesheets/signup.css">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+   
 </head>
-<body class="body-signup">  
+<body class="body-signup"> 
+  <% if @user.errors.any? %>
+    <div class="alert alert-danger">
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="position-relative">
+    <%= link_to login_path, class: "position-absolute top-0 start-0 m-3" do %>
+      <i class="bi bi-arrow-left-circle" 
+         style="font-size: 1.5rem; color: #333; background-color: #f8f9fa; border-radius: 50%; padding: 0.5rem; box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);"></i>
+    <% end %>
+  </div>
   <section>    
     <div class="px-3 py-5 px-md-5 text-center text-lg-start">
       <div class="container-fluid signup">
-        <div class="row gx-lg-5 align-items-center">
+        <div class="row gx-lg-5 align-items-center">          
           <!-- Imagem -->
-          <div class="col-md-6 mb-4 mb-md-0 text-center">
+          <div class="col-md-6 col-sm-12 text-center mb-4">
             <img src="https://mspublicschoolpremnagar.com/login/images/logo/login.gif" alt="Logo" class="img-fluid">
           </div>
 
           <!-- Formulário -->
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-12">            
             <h2 class="mb-4">Cadastro de Usuários</h2> 
             <div class="card">
               <div class="card-body py-5 px-md-5">
@@ -38,7 +61,7 @@
                     <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Confirme sua senha", required: true, minlength: 6 %>                  
                   </div>              
                                     
-                   <%= form.submit "Cadastrar", class: "btn btn-success btn-block mb-4" %>                  
+                  <%= form.submit "Cadastrar", class: "btn btn-success btn-block mb-4" %>                  
                 <% end %>
               </div>
             </div>
